# Untitled-Text-Game

./: README.md
UntitledTextGame/: CMakeLists.txt  choice.cpp  choice.h  choosePlayerClass.cpp  choosePlayerClass.h  choosePlayerGender.cpp  choosePlayerGender.h  choosePlayerName.cpp  choosePlayerName.h  levelOne.cpp  levelOne.h  main.cpp  player.cpp  player.h  roll.cpp  roll.h  rollAdv.cpp  rollAdv.h  setPronouns.cpp  setPronouns.h  setStats.cpp  setStats.h
